Corrected text centering issue with contenteditable div's. Now all div children of contenteditable are text-align: left !important.

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,6 +64,10 @@ input[type="text"] {
     line-height: inherit;
 }
 
+[contenteditable="true"] div {
+    text-align: left !important;
+}
+
 button:hover {
     transform: scale(1.05);
     cursor: pointer;
